--- a/project/helm/values.yaml
+++ b/project/helm/values.yaml
@@ -20,7 +20,7 @@ resources:
     memory: "128Mi"
     cpu: "500m"
 
-containerPort: 3111
+containersPort: 3111
 livenessProbe:
   path: /healthz 
 readinessProbe:
